# nextjs-with-langchain

./: .gitignore  docker-compose.yml
.devcontainer/backend/: devcontainer.json
.devcontainer/frontend/: devcontainer.json
backend/: .env.example  .gitignore  Dockerfile.dev  Makefile  README.md  pyproject.toml
backend/app/: app.py  joke_store.py  simple_chat.py  simple_graph.py  types.py
check-fetch/: README.md  bun.lockb  index.js  index.ts  package.json
frontend/: Dockerfile.dev  package-lock.json  package.json
frontend/app/: page.tsx
frontend/app/actions/: index.ts
frontend/components/: AiMessage.tsx  Chat.tsx  GraphChat.tsx  SimpleChat.tsx
